--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,52 @@
 *{
     margin:0;
     padding:0;
-    box-sizing: border-box;    
+    box-sizing:border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
+body{
+    background-color: gray;
+}
 main{
     /* height:100vh; */
     display:flex;
     flex-wrap: wrap;
     padding: 10px;
     /* background-color: rgba(221, 221, 221, 0.514); */
+}
+
+.input-area{
+    width: 400px;
+    height: 95px;
+    background-color:rgb(224, 224, 224);
+    border-radius: 3px;
+    padding: 5px;
+    margin:30px auto;
+    box-shadow: 1px 2px 3px 2px gray;
+}
+
+.input-area button{
+    width:40px;
+    height:40px;
+    border-radius: 50%;
+    text-align: center;
+    border: 1px solid silver;
+    font-size: 18px;
+    margin-left: 330px;
+}
+
+input{
+    width: 100%;
+    height: 30px;   
+    border: none;
+    outline: none;
+    border-radius: 3px;
+    margin-top:5px;
+    color: gray;
+    background-color: rgb(224,224,224);
+}
+input:first-child{
+    font-size: 16px;
 }
 
 .content-body{
@@ -81,5 +117,9 @@ main{
 
 
 .container-content:hover{
-    transform: translateY(-5px);
+    transform: translateY(-5px);    
+}
+.container-content P:hover
+{
+    color:yellow;
 }
